--- a/employee.html
+++ b/employee.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employee Page</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="shortcut icon" href="./assets/favicon.jpg" type="image/x-icon">
     <!-- <style>
         body{
@@ -20,19 +22,20 @@
         }
     </style> -->
 </head>
+
 <body>
     <div class="header">
         <nav class="navbar navbar-light bg-light">
             <a class="navbar-brand" href="index.html">
-              <img src="./assets/download.png" width="100%" height="40" alt="">
+                <img src="./assets/download.png" width="100%" height="40" alt="">
             </a>
             <button class="btn"><a href="index.html">Log Out</a></button>
-          </nav>
+        </nav>
 
     </div>
     <div class="container top">
         <div class="greeting">
-            <h3 >Hi! Harleen Kaur Chadha</h3>
+            <h3>Hi! Harleen Kaur Chadha</h3>
             <img src="./assets/harleen.jpg">
         </div>
         <table class="table table-borderless">
@@ -91,91 +94,106 @@
 
     </table> -->
     <div class="container employee-details">
-        <h3 class="card-title">Our Employees</h3>
+        <h1 class="card-title">Our Employees</h1>
         <div class="row">
-            <div class="col-md-4"> 
+            <div class="col-md-4">
                 <div class="card imp">
                     <img class="card-img-top" src="./assets/harleen.jpg" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">Harleen Kaur Chadha</h5>
-                      <p class="card-text"></p>
-                     </div>
-                  </div>
+                        <h5 class="card-title">Harleen Kaur Chadha</h5>
+                        <p class="card-text"></p>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-4"> 
-                  <div class="card imp">
+            <div class="col-md-4">
+                <div class="card imp">
                     <img class="card-img-top" src="./assets/divanshi.jpg" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">Divanshi Mahajan</h5>
-                      <p class="card-text"></p>
-                     </div>
-                  </div>
+                        <h5 class="card-title">Divanshi Mahajan</h5>
+                        <p class="card-text"></p>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-4"> 
-                  <div class="card imp">
+            <div class="col-md-4">
+                <div class="card imp">
                     <img class="card-img-top" src="./assets/ashna.jpg" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">Aashna Sharma</h5>
-                      <p class="card-text"></p>
-                     </div>
-                  </div>
+                        <h5 class="card-title">Aashna Sharma</h5>
+                        <p class="card-text"></p>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-4"> 
-                  <div class="card imp">
+            <div class="col-md-4">
+                <div class="card imp">
                     <img class="card-img-top" src="./assets/nidhi.jpg" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">Nidhi Rawat</h5>
-                      <p class="card-text"></p>
-                     </div>
-                  </div>
+                        <h5 class="card-title">Nidhi Rawat</h5>
+                        <p class="card-text"></p>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-4"> 
-                  <div class="card imp">
+            <div class="col-md-4">
+                <div class="card imp">
                     <img class="card-img-top" src="./assets/bhoomika.jpg" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">Bhoomika Mittal</h5>
-                      <p class="card-text"></p>
-                     </div>
-                  </div>
+                        <h5 class="card-title">Bhoomika Mittal</h5>
+                        <p class="card-text"></p>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-4"> 
-                  <div class="card imp">
+            <div class="col-md-4">
+                <div class="card imp">
                     <img class="card-img-top" src="./assets/sana.jpg" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">Sana Gupta</h5>
-                      <p class="card-text"></p>
-                     </div>
-                  </div>
+                        <h5 class="card-title">Sana Gupta</h5>
+                        <p class="card-text"></p>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-4"> 
-                  <div class="card imp">
+            <div class="col-md-4">
+                <div class="card imp">
                     <img class="card-img-top" src="./assets/sanchit.jpg" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">Sanchit Arora</h5>
-                      <p class="card-text"></p>
-                     </div>
-                  </div>
+                        <h5 class="card-title">Sanchit Arora</h5>
+                        <p class="card-text"></p>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-4"> 
-                  <div class="card imp">
+            <div class="col-md-4">
+                <div class="card imp">
                     <img class="card-img-top" src="./assets/jashan.jpg" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">Jashandeep Singla</h5>
-                      <p class="card-text"></p>
-                     </div>
-                  </div>
+                        <h5 class="card-title">Jashandeep Singla</h5>
+                        <p class="card-text"></p>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-4"> 
-                  <div class="card imp">
+            <div class="col-md-4">
+                <div class="card imp">
                     <img class="card-img-top" src="./assets/sidhant.jpg" alt="Card image cap">
                     <div class="card-body">
-                      <h5 class="card-title">Siddhant Mishra</h5>
-                      <p class="card-text"></p>
-                     </div>
-                  </div>
+                        <h5 class="card-title">Siddhant Mishra</h5>
+                        <p class="card-text"></p>
+                    </div>
+                </div>
             </div>
-                
+
         </div>
     </div>
+    <div class="footer">
+        <a class="footer-brand" href="index.html">
+          <img src="./assets/download.png" alt="" style="padding-right: 150px;">
+        </a>
+        <h4 style="padding-left: 200px;">Contact us: </h4>
+        <span style="color: rgb(0, 44, 63); padding-right: 20px;">
+        <a href="https://www.linkedin.com/company/cginfinity/mycompany/"><i class="fa-brands fa-linkedin fa-2xl fa-beat-fade fa-pull-right" style="color:rgb(0, 44, 63)"></i></a>
+        <a href="https://www.facebook.com/cginfinityinc/"><i class="fa-brands fa-facebook fa-2xl fa-beat-fade fa-pull-right" style="color:rgb(0, 44, 63)"></i></a>
+        <a href="https://www.youtube.com/@CGInfinityInc"><i class="fa-brands fa-youtube fa-2xl fa-beat-fade fa-pull-right" style="color:rgb(0, 44, 63)"></i></a>
+        </a>
+        </span>
+      </div>
+      <script src="https://kit.fontawesome.com/327b0a4294.js" crossorigin="anonymous"></script>
+
 </body>
+
 </html>
