--- a/register.html
+++ b/register.html
@@ -1,46 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./assets/favicon.jpg" type="image/x-icon">
 </head>
+
 <body class="register-body">
     <div class="header">
         <nav class="navbar navbar-light bg-light">
             <a class="navbar-brand" href="index.html">
-              <img src="./assets/download.png" width="100%" height="40" alt="">
+                <img src="./assets/download.png" width="100%" height="40" alt="">
             </a>
-          </nav>
+            <button class="btn"><a href="index.html">Cancel</a></button>
+        </nav>
 
     </div>
-    <h2 style="margin-top:50px; text-align: center;color: white;">Register here</h2>
+    <h2 style="margin-top: 20px; text-align: center;color: white;">Register here</h2>
+    
     <main>
         <div class="register-box">
-        <label >First name:</label><br>
-        <input type="text" required><br>
-        <label >Last name:</label><br>
-        <input type="text" required><br>
-        <label >Permanent Address</label><br>
-        <input type="text" required><br>
-        <label >Temporary Address</label><br>
-        <input type="text" required><br>
-        <label >DOB</label><br>
-        <input type="date" required><br><br>
-        <label >Employee type</label><br>
-        <input type="radio">Intern
-        <input type="radio">Full-time
-        <input type="radio">Seasonal<br><br>
-        <label>Employee Code</label><br>
-        <input type="text" required><br><br>
-        <label>Attach resume</label>
-        <input type="file"><br><br>
-    
-        <button><a href="login.html">Register</a></button>
+            <label required>First name:</label>
+            <input class="form-control" type="text"><br>
+            <label required>Last name:</label>
+            <input class="form-control" type="text"><br>
+            <label>Permanent Address:</label>
+            <input class="form-control" type="text"><br>
+            <label>Temporary Address:</label>
+            <input class="form-control"  type="text"><br>
+            <label required>DOB:</label>
+            <input  class="form-control" type="number"><br>
+            <label>Employee type:</label><br>
+            <input type="radio">Intern
+            <input type="radio">Full-time
+            <input type="radio">Seasonal<br><br>
+            <label required>Employee Code:</label>
+            <input  class="form-control" type="number"><br>
+            <label>Attach resume:</label><br>
+            <input type="file"><br><br>
+
+            <button class="btn"><a href="login.html">Register</a></button>
         </div>
     </main>
+    <div class="footer" style="margin-top: 300px;">
+        <a class="footer-brand" href="index.html">
+          <img src="./assets/download.png" alt="" style="padding-right: 150px;">
+        </a>
+        <h4 style="padding-left: 200px;">Contact us: </h4>
+        <span style="color: rgb(0, 44, 63); padding-right: 20px;">
+        <a href="https://www.linkedin.com/company/cginfinity/mycompany/"><i class="fa-brands fa-linkedin fa-2xl fa-beat-fade fa-pull-right" style="color:rgb(0, 44, 63)"></i></a>
+        <a href="https://www.facebook.com/cginfinityinc/"><i class="fa-brands fa-facebook fa-2xl fa-beat-fade fa-pull-right" style="color:rgb(0, 44, 63)"></i></a>
+        <a href="https://www.youtube.com/@CGInfinityInc"><i class="fa-brands fa-youtube fa-2xl fa-beat-fade fa-pull-right" style="color:rgb(0, 44, 63)"></i></a>
+        </a>
+        </span>
+      </div>
+      <script src="https://kit.fontawesome.com/327b0a4294.js" crossorigin="anonymous"></script>
+
 </body>
+
 </html>
