--- a/employee.html
+++ b/employee.html
@@ -26,10 +26,10 @@
 <body>
     <div class="header">
         <nav class="navbar navbar-light bg-light">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="first.html">
                 <img src="./assets/download.png" width="100%" height="40" alt="">
             </a>
-            <button class="btn"><a href="index.html">Log Out</a></button>
+            <button class="btn"><a href="first.html">Log Out</a></button>
         </nav>
 
     </div>
@@ -181,7 +181,7 @@
         </div>
     </div>
     <div class="footer">
-        <a class="footer-brand" href="index.html">
+        <a class="footer-brand" href="first.html">
           <img src="./assets/download.png" alt="" style="padding-right: 150px;">
         </a>
         <h4 style="padding-left: 200px;">Contact us: </h4>
