--- a/login.html
+++ b/login.html
@@ -14,9 +14,10 @@
 <body class="login-body">
   <div class="header">
     <nav class="navbar navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="first.html">
         <img src="./assets/download.png" width="100%" height="40" alt="">
       </a>
+      <button class="btn"><a href="first.html">Cancel</a></button>
     </nav>
 
   </div>
@@ -34,7 +35,7 @@
     </div>
   </main>
   <div class="footer">
-    <a class="footer-brand" href="index.html">
+    <a class="footer-brand" href="first.html">
       <img src="./assets/download.png" alt="" style="padding-right: 150px;">
     </a>
     <h4 style="padding-left: 200px;">Contact us: </h4>
