--- a/first.html
+++ b/first.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Home Page</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -53,7 +53,7 @@
 
   </div>
 
-  <main>
+  
 
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
@@ -77,7 +77,7 @@
       </a>
     </div>
 
-  </main>
+  
   <div class="iframes">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/1c3XOgnThDE" title="YouTube video player"
       frameborder="0"
@@ -104,42 +104,42 @@
       <tr>
         <td>2</td>
         <td>Divanshi Mahajan</td>
-        <td>INT 196</td>
+        <td>INT 193</td>
       </tr>
       <tr>
         <td>3</td>
         <td>Aashna Sharma</td>
-        <td>INT 196</td>
+        <td>INT 182</td>
       </tr>
       <tr>
         <td>4</td>
         <td>Nidhi Rawat</td>
-        <td>INT 196</td>
+        <td>INT 191</td>
       </tr>
       <tr>
         <td>5</td>
         <td>Bhoomika Mittal</td>
-        <td>INT 196</td>
+        <td>INT 188</td>
       </tr>
       <tr>
         <td>6</td>
         <td>Sana Gupta</td>
-        <td>INT 196</td>
+        <td>INT 190</td>
       </tr>
       <tr>
         <td>7</td>
         <td>Sanchit Arora</td>
-        <td>INT 196</td>
+        <td>INT 192</td>
       </tr>
       <tr>
         <td>8</td>
         <td>Jashandeep Singla</td>
-        <td>INT 196</td>
+        <td>INT 194</td>
       </tr>
       <tr>
         <td>9</td>
         <td>Siddhant Mishra</td>
-        <td>INT 196</td>
+        <td>INT 195</td>
       </tr>
     </table>
   </div>
@@ -232,7 +232,6 @@
     </div>
 
   </div>
-  <script src="https://kit.fontawesome.com/327b0a4294.js" crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/327b0a4294.js" crossorigin="anonymous"></script>
 
 </body>
