--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Login Form</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
@@ -38,14 +38,17 @@
     <a class="footer-brand" href="first.html">
       <img src="./assets/download.png" alt="" style="padding-right: 150px;">
     </a>
-    <h4 style="padding-left: 200px;">Contact us: </h4>
-    <span style="color: rgb(0, 44, 63); padding-right: 20px;">
+    <span class="iframe-span">
+    <h4>Contact us: </h4>
+    <span style="color: rgb(0, 44, 63)">
     <a href="https://www.linkedin.com/company/cginfinity/mycompany/"><i class="fa-brands fa-linkedin fa-2xl fa-beat-fade fa-pull-right" style="color:rgb(0, 44, 63)"></i></a>
     <a href="https://www.facebook.com/cginfinityinc/"><i class="fa-brands fa-facebook fa-2xl fa-beat-fade fa-pull-right" style="color:rgb(0, 44, 63)"></i></a>
     <a href="https://www.youtube.com/@CGInfinityInc"><i class="fa-brands fa-youtube fa-2xl fa-beat-fade fa-pull-right" style="color:rgb(0, 44, 63)"></i></a>
-    </a>
+    </span>
     </span>
   </div>
+  <script src="https://kit.fontawesome.com/327b0a4294.js" crossorigin="anonymous"></script>
+ 
 
 </body>
 
