--- a/register.html
+++ b/register.html
@@ -2,16 +2,18 @@
 <html lang="en">
 
 <head>
+    <!-- Head section code... -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="./assets/favicon.jpg" type="image/x-icon">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Registration Form</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="./assets/favicon.jpg" type="image/x-icon">
 </head>
 
 <body class="register-body">
+    <!-- Body section code... -->
     <div class="header">
         <nav class="navbar navbar-light bg-light">
             <a class="navbar-brand" href="first.html">
@@ -22,32 +24,61 @@
 
     </div>
     <h2 style="margin-top: 20px; text-align: center;color: white;">Register here</h2>
-    
+
     <main>
         <div class="register-box">
-            <label required>First name:</label>
-            <input class="form-control" type="text"><br>
-            <label required>Last name:</label>
-            <input class="form-control" type="text"><br>
-            <label>Permanent Address:</label>
-            <input class="form-control" type="text"><br>
-            <label>Temporary Address:</label>
-            <input class="form-control"  type="text"><br>
-            <label required>DOB:</label>
-            <input  class="form-control" type="number"><br>
-            <label>Employee type:</label><br>
-            <input type="radio">Intern
-            <input type="radio">Full-time
-            <input type="radio">Seasonal<br><br>
-            <label required>Employee Code:</label>
-            <input  class="form-control" type="number"><br>
-            <label>Attach resume:</label><br>
-            <input type="file"><br><br>
+            <form onsubmit="return validateForm()" action="login.html">
+                <label for="first-name">First name:</label>
+                <input required class="form-control" type="text" id="first-name"><br>
 
-            <button class="btn"><a href="login.html">Register</a></button>
+                <label for="last-name">Last name:</label>
+                <input required class="form-control" type="text" id="last-name"><br>
+
+                <label for="permanent-address">Permanent Address:</label>
+                <input class="form-control" type="text" id="permanent-address"><br>
+
+                <label for="temporary-address">Temporary Address:</label>
+                <input class="form-control" type="text" id="temporary-address"><br>
+
+                <label for="dob">DOB:</label>
+                <input required class="form-control" type="date" id="dob"><br>
+
+                <label>Employee type:</label><br>
+                <input required type="radio" name="employee-type" value="Intern">Intern
+                <input required type="radio" name="employee-type" value="Full-time">Full-time
+                <input required type="radio" name="employee-type" value="Seasonal">Seasonal<br><br>
+
+                <label for="employee-code">Employee Code:</label>
+                <input required class="form-control" type="number" id="employee-code"><br>
+
+                <label for="resume">Attach resume:</label><br>
+                <input type="file" id="resume"><br><br>
+
+                <button class="btn" type="submit" id="login">Register</button>
+            </form>
         </div>
     </main>
-    <div class="footer" style="margin-top: 300px;">
+
+    <script>
+        function validateForm() {
+            var firstName = document.getElementById('first-name').value;
+            var lastName = document.getElementById('last-name').value;
+            var dob = document.getElementById('dob').value;
+            var employeeCode = document.getElementById('employee-code').value;
+            var employeeType = document.querySelector('input[name="employee-type"]:checked');
+
+            if (firstName === '' || lastName === '' || dob === '' || employeeCode === '' || !employeeType) {
+                alert('Please fill in all required fields.');
+                return false;
+            }
+
+            // Additional validation logic...
+
+            return true;
+        }
+    </script>
+
+    <div class="footer">
         <a class="footer-brand" href="first.html">
           <img src="./assets/download.png" alt="" style="padding-right: 150px;">
         </a>
@@ -59,8 +90,10 @@
         </a>
         </span>
       </div>
-      <script src="https://kit.fontawesome.com/327b0a4294.js" crossorigin="anonymous"></script>
-
+  
+    </div>
+    <script src="https://kit.fontawesome.com/327b0a4294.js" crossorigin="anonymous"></script>
+  
 </body>
 
 </html>
