--- a/register.html
+++ b/register.html
@@ -25,7 +25,7 @@
     </div>
     <h2 style="margin-top: 20px; text-align: center;color: white;">Register here</h2>
 
-    <main>
+    <main class="fixed-register">
         <div class="register-box">
             <form onsubmit="return validateForm()" action="login.html">
                 <label for="first-name">First name:</label>
